Fix: layout issues when it comes to buttons. Not implemented everywhere yet but the solution has been found.

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -301,3 +301,7 @@ input[name='q']::placeholder {
 .allauth-form-inner-content hr {
     color: var(--black);
 }
+
+.no-overflow {
+    overflow:hidden;
+}
